# VulkanDemos

./: .gitignore
ClearScreen/: CMakeLists.txt  msvc_x64.bat
ClearScreen/Shaders/: NoVertices.glsl
ClearScreen/Source/: ClearScreen.cpp  VKClearScreen.cpp  VKClearScreen.h
ClearScreenAndroid/app/: build.gradle  proguard-rules.pro
ClearScreenAndroid/app/src/androidTest/java/com/k6project/clearscreen/: ExampleInstrumentedTest.java
ClearScreenAndroid/app/src/main/: AndroidManifest.xml
ClearScreenAndroid/app/src/main/cpp/: native-lib.cpp
ClearScreenAndroid/app/src/main/java/com/k6project/clearscreen/: MainActivity.java
ClearScreenAndroid/app/src/main/res/layout/: main_activity_layout.xml
ClearScreenAndroid/app/src/test/java/com/k6project/clearscreen/: ExampleUnitTest.java
FullScreenQuad/: CMakeLists.txt
FullScreenQuad/Shaders/: NoVertices.glsl
FullScreenQuad/Source/: FullScreenQuad.cpp
Shared/: Globals.h  NativeFile.cpp  WindowsMain.cpp
Shared/Platform/: Application.cpp  Application.h  NativeFile.cpp  NativeFile.h  NativeWindow.h  WindowsMain.cpp
Shared/Vulkan/: Device.cpp  Device.h  Device.inl  Instance.cpp
Shared/VulkanAPI/: Buffer.cpp  Buffer.h  CommandProxy.cpp  CommandProxy.h  Device.cpp  Device.h  Device.inl  DeviceRequest.cpp  DeviceRequest.h  Instance.cpp  Instance.h  Instance.inl  Loader.cpp  NativeWindow.h  Pipeline.cpp  Pipeline.h
